| Bug #45286 | compilation warnings on mysql-5.0-bugteam on MacOSX | ||
|---|---|---|---|
| Submitted: | 3 Jun 2009 8:10 | Modified: | 12 Aug 2009 15:48 |
| Reporter: | Georgi Kodinov | Email Updates: | |
| Status: | Closed | Impact on me: | |
| Category: | MySQL Server: Compiling | Severity: | S3 (Non-critical) |
| Version: | 5.0+ | OS: | MacOS |
| Assigned to: | Georgi Kodinov | CPU Architecture: | Any |
| Tags: | ProdEngPB2 | ||
[3 Jun 2009 8:10]
Georgi Kodinov
[5 Jun 2009 12:08]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/commits/75701 2767 Georgi Kodinov 2009-06-05 Bug #45286: compilation warnings on mysql-5.0-bugteam on MacOSX Fixed the 5.0-bugteam MacOSX warnings. @ client/mysqldump.c Bug #45286: typecasts @ cmd-line-utils/readline/bind.c Bug #45286: use variable of right type @ cmd-line-utils/readline/display.c Bug #45286: use variable of right type @ dbug/user.r Bug #45286: no warnings in generating man pages @ strings/ctype.c Bug #45286: typecasts
[5 Jun 2009 13:44]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/commits/75706 2931 Georgi Kodinov 2009-06-05 Bug #45286: compilation warnings on mysql-5.0-bugteam on MacOSX Merged the 5.0 fix to 5.1 and fixed the 5.1 specific warnings.
[5 Jun 2009 15:17]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/commits/75715 2768 Georgi Kodinov 2009-06-05 Bug #45286: compilation warnings on mysql-5.0-bugteam on MacOSX Implemented a way to circumvent the always true comparison by having nested macros (as suggested on review).
[5 Jun 2009 16:24]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/commits/75725 2769 Georgi Kodinov 2009-06-05 Addendum to Bug #45286 : implement reviewer's remarks.
[6 Jun 2009 13:08]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/commits/75779 2932 Tatiana A. Nurnberg 2009-06-06 Addendum to Bug #45286: backport macro name form other tree use same (slightly unwieldy) name in all trees; fix before this version goes "public". bless ctype to avoid upmerge conflict, le sigh.
[16 Jun 2009 8:33]
Bugs System
Pushed into 5.0.84 (revid:gkodinov@mysql.com-20090616082753-kwe0l8uoictxhojf) (version source revid:azundris@mysql.com-20090605212937-9kcqi5zjat2f2awm) (merge vers: 5.0.83) (pib:6)
[16 Jun 2009 11:04]
Bugs System
Pushed into 5.1.36 (revid:joro@sun.com-20090616102155-3zhezogudt4uxdyn) (version source revid:azundris@mysql.com-20090606160558-utmxhnb88ur1vcra) (merge vers: 5.1.36) (pib:6)
[17 Jun 2009 19:24]
Bugs System
Pushed into 5.4.4-alpha (revid:alik@sun.com-20090616183122-chjzbaa30qopdra9) (version source revid:azundris@mysql.com-20090606160423-aym8s5rn51nmg387) (merge vers: 6.0.12-alpha) (pib:11)
[12 Aug 2009 15:48]
Paul DuBois
Noted in 5.0.84, 5.1.36, 5.4.4 changelogs. Compiler warnings on Mac OS X were fixed.
[26 Aug 2009 13:46]
Bugs System
Pushed into 5.1.37-ndb-7.0.8 (revid:jonas@mysql.com-20090826132541-yablppc59e3yb54l) (version source revid:jonas@mysql.com-20090826132541-yablppc59e3yb54l) (merge vers: 5.1.37-ndb-7.0.8) (pib:11)
[26 Aug 2009 13:46]
Bugs System
Pushed into 5.1.37-ndb-6.3.27 (revid:jonas@mysql.com-20090826105955-bkj027t47gfbamnc) (version source revid:jonas@mysql.com-20090826105955-bkj027t47gfbamnc) (merge vers: 5.1.37-ndb-6.3.27) (pib:11)
[26 Aug 2009 13:48]
Bugs System
Pushed into 5.1.37-ndb-6.2.19 (revid:jonas@mysql.com-20090825194404-37rtosk049t9koc4) (version source revid:jonas@mysql.com-20090825194404-37rtosk049t9koc4) (merge vers: 5.1.37-ndb-6.2.19) (pib:11)
[27 Aug 2009 16:32]
Bugs System
Pushed into 5.1.35-ndb-7.1.0 (revid:magnus.blaudd@sun.com-20090827163030-6o3kk6r2oua159hr) (version source revid:jonas@mysql.com-20090826132541-yablppc59e3yb54l) (merge vers: 5.1.37-ndb-7.0.8) (pib:11)
[7 Oct 2009 18:36]
Paul DuBois
The 5.4 fix has been pushed to 5.4.2.
